only now correctly encoding search keywords and urls
git-svn-id: http://www.ontocat.org/svn/trunk@188 f0dfcaea-3b95-4152-9e97-e99b8c58adb7